welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: ';' expected but 'else' found.
			else if(estFaceMur())
                        ^Diagonal:15: error: ';' expected but 'else' found.
			else setPos(getX()+1,getY()-1)	
                        ^Diagonal:21: error: ';' expected but 'else' found.
			else setPos(getX()+1,getY()-1)	
                        ^